--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
+<!DOCTPYE html>
 <html>
-  <head>
-    <title>Github page</title>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  
-  <body>
-  <p>Make some changes</p>
-  </body>
-  </html>
+<head>
+  <title>Zuber A Abdikadir</title>
