--- a/index.html
+++ b/index.html
@@ -11,3 +11,7 @@
          <h2><b>Savage,MN</b></h1>
          <h2><b>612-478-2889</b></h1>
          <h2><b>zoobea20@gmail.com</b></h2>
+  
+  
+  </body>
+</html>
