--- a/index.html
+++ b/index.html
@@ -1,17 +1,52 @@
-<!DOCTPYE html>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Zuber A Abdikadir</title>
-
+<head> 
+ <title>Zuber A Abdikadir</title>
+<link rel="stylesheet" type="text/css" href="style.css"/>	
 </head>
-       <body>
-       <h1>
+	<body> 
+	<h1>
 
-         Zuber A Abdikadir</h1>
-         <h2><b>Savage,MN</b></h1>
-         <h2><b>612-478-2889</b></h1>
-         <h2><b>zoobea20@gmail.com</b></h2>
-  
-  
-  </body>
+	Zuber A Abdikadir </h1>
+	<h2><b>Savage, MN </b></h1>
+	<H2> <b>612-478-2889</b> </h1>
+	<h2>zoobear20@gmail.com</b></h1>
+
+	
+<h3>Business Professional</h3>
+<li>Navy Veteran leveraging 5+ years of proven experience in leadership and management.  Accomplished measurable results while leading teams of 8 personnel in a dynamic, fast - paced environment.  Possess a comprehensive background in operations management, customer service, and process improvement derived from conducting domestic and global operations including Bahrain, Dubai, and Australia.  Possess extensive knowledge in team leadership, risk mitigation, and inter-personal communication.  Recipient of multiple awards for outstanding performance and professionalism.  Career supported by Department of Defense training, certificates, and Associate of Science in Computer Science.  Areas of expertise include: </li> 
+	<b>Customer Service
+Team Leadership
+Strategic Planning
+
+Process Improvement
+Training and Development
+Policy Implementation
+
+Business Data Analysis
+Inter-cultural Communication
+Quality Assurance</b>
+  <h1> Releveant Experience</h1>
+  <h3>Team Managment</h3>
+<li>● Directly supervised 8 employees to include interaction with guests and team members while exceeding sales goals at Life Time Fitness health club </li>
+<li> ● Served as acting fire marshal and fire-fighting leader by training 40 personnel in the operation, maintenance, and repair of damage control systems, and life saving devices onboard USS Rushmore.</li> 
+<li>● Trained, developed, and certifiied personnel in chemical, biological, and radiological defenses in support of worldwide contingency operation.</li>
+<li>● Completed 15 fire-fighting system overhauls; resulted in saved the organization in over $100K in third party repair costs.</li>
+
+ 
+	<h1> Customer Service</h1>
+<li> ● Provided customer satisfaction through efficient and accurate order taking; ensured guests received a high-quality dining experience.</li>
+<li> ● Performed food preparation, cleaning, and safe handling duties including proficient use of the Aloha point of sale system.</li>
+ 
+<h1> Employment History </h1>
+
+<li> ● Associate | Costco | San Diego, CA | 2016 – Present </li
+<li> ● Server | Applebee’s | San Diego, CA | 2014 – 2015  </li>
+<li> ● Supervisor | Lifetime Fitness | San Diego, CA | 2014 – 2015 </li>
+<li> ● Team Leader| US Navy | San Diego, CA | 2012 – 2014 </li>
+	
+ 
+	<h1>Education</h1>
+<p>Grossmont College | El Cajon, CA</p>
+	</body>
 </html>
