--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 	
 <h3>Business Professional</h3>
 <li>Navy Veteran leveraging 5+ years of proven experience in leadership and management.  Accomplished measurable results while leading teams of 8 personnel in a dynamic, fast - paced environment.  Possess a comprehensive background in operations management, customer service, and process improvement derived from conducting domestic and global operations including Bahrain, Dubai, and Australia.  Possess extensive knowledge in team leadership, risk mitigation, and inter-personal communication.  Recipient of multiple awards for outstanding performance and professionalism.  Career supported by Department of Defense training, certificates, and Associate of Science in Computer Science.  Areas of expertise include: </li> 
-	<b>Customer Service
-Team Leadership
-Strategic Planning
+	<li>Customer Service</li>
+	<li>Team Leadership</li>
+	<li>Strategic Planning</li>
+	<li>Process Improvement</li>
+	<li>Training and Development</li>
+	<li>Policy Implementation</li>
 
-Process Improvement
-Training and Development
-Policy Implementation
-
-Business Data Analysis
-Inter-cultural Communication
-Quality Assurance</b>
+	<li>Business Data Analysis</li>
+	<li>Inter-cultural Communication</li>
+	<li>Quality Assurance</li>
   <h1> Releveant Experience</h1>
   <h3>Team Managment</h3>
 <li>● Directly supervised 8 employees to include interaction with guests and team members while exceeding sales goals at Life Time Fitness health club </li>
@@ -47,6 +46,6 @@ Quality Assurance</b>
 	
  
 	<h1>Education</h1>
-<p>Grossmont College | El Cajon, CA</p>
+<li>Grossmont College | El Cajon, CA</li>
 	</body>
 </html>
