--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
  
 	<h1> Customer Service</h1>
-<li> ● Provided customer satisfaction through efficient and accurate order taking; ensured guests received a high-quality dining experience.</li>
-<li> ● Performed food preparation, cleaning, and safe handling duties including proficient use of the Aloha point of sale system.</li>
+<li> Provided customer satisfaction through efficient and accurate order taking; ensured guests received a high-quality dining experience.</li>
+<li> Performed food preparation, cleaning, and safe handling duties including proficient use of the Aloha point of sale system.</li>
  
 <h1> Employment History </h1>
 
