--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	<li>Quality Assurance</li>
   <h1> Releveant Experience</h1>
   <h3>Team Managment</h3>
-<li>● Directly supervised 8 employees to include interaction with guests and team members while exceeding sales goals at Life Time Fitness health club </li>
-<li> ● Served as acting fire marshal and fire-fighting leader by training 40 personnel in the operation, maintenance, and repair of damage control systems, and life saving devices onboard USS Rushmore.</li> 
-<li>● Trained, developed, and certifiied personnel in chemical, biological, and radiological defenses in support of worldwide contingency operation.</li>
-<li>● Completed 15 fire-fighting system overhauls; resulted in saved the organization in over $100K in third party repair costs.</li>
+<li> Directly supervised 8 employees to include interaction with guests and team members while exceeding sales goals at Life Time Fitness health club </li>
+<li> Served as acting fire marshal and fire-fighting leader by training 40 personnel in the operation, maintenance, and repair of damage control systems, and life saving devices onboard USS Rushmore.</li> 
+<li> Trained, developed, and certifiied personnel in chemical, biological, and radiological defenses in support of worldwide contingency operation.</li>
+<li> Completed 15 fire-fighting system overhauls; resulted in saved the organization in over $100K in third party repair costs.</li>
 
  
 	<h1> Customer Service</h1>
@@ -39,10 +39,10 @@
  
 <h1> Employment History </h1>
 
-<li> ● Associate | Costco | San Diego, CA | 2016 – Present </li
-<li> ● Server | Applebee’s | San Diego, CA | 2014 – 2015  </li>
-<li> ● Supervisor | Lifetime Fitness | San Diego, CA | 2014 – 2015 </li>
-<li> ● Team Leader| US Navy | San Diego, CA | 2012 – 2014 </li>
+<li> Associate | Costco | San Diego, CA | 2016 – Present </li
+<li> Server | Applebee’s | San Diego, CA | 2014 – 2015  </li>
+<li> Supervisor | Lifetime Fitness | San Diego, CA | 2014 – 2015 </li>
+<li> Team Leader| US Navy | San Diego, CA | 2012 – 2014 </li>
 	
  
 	<h1>Education</h1>
