--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 <li> Performed food preparation, cleaning, and safe handling duties including proficient use of the Aloha point of sale system.</li>
  
 <h1> Employment History </h1>
-
-<li> Associate | Costco | San Diego, CA | 2016 – Present </li
-<li> Server | Applebee’s | San Diego, CA | 2014 – 2015  </li>
-<li> Supervisor | Lifetime Fitness | San Diego, CA | 2014 – 2015 </li>
+<li> Associate | Costco | San Diego, CA | 2016 – Present </li>
+<li> Server | Applebee’s |Savage, MN | 2014 – 2015</li>
+<li> Supervisor | Lifetime Fitness | Savage, MN | 2014 – 2015 </li>
 <li> Team Leader| US Navy | San Diego, CA | 2012 – 2014 </li>
 	
  
